Fix user profile CSS to avoid long email addresses spilling out of the infobox
This makes the infobox list items scroll when they get too large, instead of overflowing into the rest of the page. It also forces subitems (the icons and text) to stay in a horizontal layout when they get too large to fit, instead of trying to wrap and ending up vertical.

--- a/public/less/_user.less
+++ b/public/less/_user.less
@@ -20,6 +20,9 @@
                         padding: 10px;
                         list-style: none;
 
+                        overflow: scroll; // prevent contents from spilling over
+                        display: flex; // lay out contents horizontally
+
                         &:not(:last-child) {
                             border-bottom: 1px solid #eaeaea;
                         }
